--- a/site/_layouts/gallery_index.html
+++ b/site/_layouts/gallery_index.html
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: gallery_base
 ---
 <style TYPE="text/css">
 .gallery-wrapper {
@@ -11,13 +11,29 @@ layout: page
   max-height: 20em;
   max-width: 20em;
 }
+    .hidden {
+        display: none;
+    }
 </style>
+<div class="gallery">
 {% for gallery in page.galleries %}
 <div class="gallery-wrapper">
-    <a href="{{ gallery['gallery'] }}">
+    {%assign best=gallery['best_image']%}
+    <div class="gallery-item" data-src="{{ gallery['gallery'] }}/{{ gallery['best_image'] }}">
         <img class="gallery-best-image" src="{{ gallery['gallery'] }}/thumbs/{{ gallery['best_image'] }}">
-    </a>
+    </div>
+    {% for image in gallery.images %}
+        {% unless image.name == best %}
+        <div class="gallery-item" data-src="{{ gallery['gallery'] }}/{{ image.name }}">
+            <img class="hidden" src="{{ gallery['gallery'] }}/thumbs/{{ image.name }}">
+        </div>
+        {% endunless %}
+    {% endfor %}
+
     <h3><a href="{{ gallery['gallery'] }}">{{ gallery["name"] }}</a></h3>
     {{ gallery["images"] | size }} image{% if gallery["images"].size != 1 %}s{% endif %}
 </div>
 {% endfor %}
+</div>
+
+{{content}}
