Added foundation for grid of images

--- a/site/_layouts/full-width.html
+++ b/site/_layouts/full-width.html
@@ -21,6 +21,8 @@
 
 {%- include footer.html -%}
 
+<script src="{{'/node_modules/foundation-sites/dist/js/foundation.min.js'}}"></script>
+
 </body>
 
 </html>
