--- a/site/_layouts/gallery_page.html
+++ b/site/_layouts/gallery_page.html
@@ -15,4 +15,10 @@ layout: gallery_base
     {% endfor %}
 </div>
 
+<script>
+$(document).ready(function(){
+    $(document).foundation();
+});
+</script>
+
 {{ content }}
