--- a/site/_layouts/gallery_index.html
+++ b/site/_layouts/gallery_index.html
@@ -15,25 +15,27 @@ layout: gallery_base
         display: none;
     }
 </style>
-<div class="gallery">
-{% for gallery in page.galleries %}
-<div class="gallery-wrapper">
-    {%assign best=gallery['best_image']%}
-    <div class="gallery-item" data-src="{{ gallery['gallery'] }}/{{ gallery['best_image'] }}">
-        <img class="gallery-best-image" src="{{ gallery['gallery'] }}/thumbs/{{ gallery['best_image'] }}">
-    </div>
-    {% for image in gallery.images %}
-        {% unless image.name == best %}
-        <div class="gallery-item" data-src="{{ gallery['gallery'] }}/{{ image.name }}">
-            <img class="hidden" src="{{ gallery['gallery'] }}/thumbs/{{ image.name }}">
-        </div>
-        {% endunless %}
-    {% endfor %}
+<div class="grid-container fluid gallery">
+    <div class="grid-x grid-margin-x small-up-2 medium-up-4 large-up-6">
+        {% for gallery in page.galleries %}
+        <div class="cell gallery-wrapper">
+            {%assign best=gallery['best_image']%}
+            <div class="gallery-item" data-src="{{ gallery['gallery'] }}/{{ gallery['best_image'] }}">
+                <img class="gallery-best-image" src="{{ gallery['gallery'] }}/thumbs/{{ gallery['best_image'] }}">
+            </div>
+            {% for image in gallery.images %}
+                {% unless image.name == best %}
+                <div class="gallery-item" data-src="{{ gallery['gallery'] }}/{{ image.name }}">
+                    <img class="hidden" src="{{ gallery['gallery'] }}/thumbs/{{ image.name }}">
+                </div>
+                {% endunless %}
+            {% endfor %}
 
-    <h3><a href="{{ gallery['gallery'] }}">{{ gallery["name"] }}</a></h3>
-    {{ gallery["images"] | size }} image{% if gallery["images"].size != 1 %}s{% endif %}
-</div>
-{% endfor %}
+            <h3><a href="{{ gallery['gallery'] }}">{{ gallery["name"] }}</a></h3>
+            {{ gallery["images"] | size }} image{% if gallery["images"].size != 1 %}s{% endif %}
+        </div>
+        {% endfor %}
+    </div>
 </div>
 
 {{content}}
