Added suggest dep what-input

--- a/site/_layouts/gallery_base.html
+++ b/site/_layouts/gallery_base.html
@@ -5,7 +5,7 @@ layout: full-width
 </style>
 
 <link rel="stylesheet" type="text/css" href="{{'/node_modules/lightgallery/dist/css/lightgallery.min.css' }}"/>
-
+<script src="{{'/node_modules/what-input/dist/what-input.min.js' }}"></script>
 <script src="{{'/node_modules/jquery/dist/jquery.min.js' }}"></script>
 <script src="{{'/node_modules/jquery-mousewheel/jquery.mousewheel.js' }}"></script>
 <script src="{{'/node_modules/lightgallery/dist/js/lightgallery.min.js' }}"></script>
