Fixed title link

--- a/site/assets/main.scss
+++ b/site/assets/main.scss
@@ -16,7 +16,7 @@ html, body {
 }
 
 h1, .site-title {
-  color: #3498db;
+  color: #3498db !important;
   font-family: Pacifico, sans-serif;
   font-size: 72px;
   font-weight: 400;
